--- a/src/Adder/CMakeLists.txt
+++ b/src/Adder/CMakeLists.txt
@@ -1,1 +1,6 @@
-add_library(add1 add.cpp)  
+add_library(adder add.cpp add.h)  
+
+install(TARGETS adder DESTINATION lib)
+#install library libadder.a in usr/local/bin (for linux)
+install(FILES add.h DESTINATION include)
+#install file add.h in usr/local/include (for linux)
